--- a/our-team.html
+++ b/our-team.html
@@ -14,6 +14,9 @@
         .font-heading { font-family: 'Playfair Display', serif; }
         .nigeria-green { color: #008751; }
         .nigeria-green-bg { background-color: #008751; }
+        header {
+            border-bottom: 4px solid #008751;
+        }
         .dropdown .dropdown-content { display: none; }
         .dropdown-content { position: absolute; background-color: white; min-width: 240px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); z-index: 1; border-radius: 0.5rem; padding: 0.5rem 0; border-top: 3px solid #008751; }
         .dropdown-content a { color: black; padding: 12px 16px; text-decoration: none; display: block; font-size: 0.9rem; }
@@ -66,53 +69,72 @@
     <!-- Header -->
     <header class="bg-white shadow-md sticky top-0 w-full z-10">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
-            <a href="index.html" class="flex items-center space-x-3">
-                <img src="images/logo.png" alt="Nigerian Coat of Arms" class="h-12 w-12">
-                <div>
-                    <h1 class="text-lg font-bold nigeria-green font-heading">Embassy of Nigeria</h1>
-                    <p class="text-xs text-gray-600">Prague, Czech Republic</p>
+            <div class="flex items-center">
+                <a href="index.html" class="flex items-center space-x-3">
+                    <img src="images/logo.png" alt="Nigerian Coat of Arms" class="h-12 w-12">
+                    <div>
+                        <h1 class="text-lg font-bold nigeria-green font-heading">Embassy of Nigeria</h1>
+                        <p class="text-xs text-gray-600">Prague, Czech Republic</p>
+                    </div>
+                </a>
+                <div class="hidden xl:flex items-center text-sm text-gray-500 ml-8 pl-8 border-l border-gray-200">
+                    <i class="fas fa-clock mr-2 nigeria-green"></i>
+                    <span id="prague-time"></span>
                 </div>
-            </a>
-            <div class="hidden lg:flex items-center space-x-6 text-sm font-semibold">
-                <a href="index.html" class="text-gray-600 hover:nigeria-green">Home</a>
-                <div class="dropdown relative">
-                    <button class="dropdown-toggle nigeria-green inline-flex items-center">About Us <i class="fas fa-chevron-down text-xs ml-2"></i></button>
-                    <div class="dropdown-content">
-                        <a href="ambassador.html">Ambassador's Welcome</a>
-                        <a href="mission-history.html">History of the Mission</a>
-                        <a href="our-team.html">Our Team</a>
+            </div>
+            <div class="hidden lg:flex items-center">
+                <div class="flex items-center space-x-6 text-sm font-semibold">
+                    <a href="index.html" class="text-gray-600 hover:nigeria-green">Home</a>
+                    <div class="dropdown relative">
+                        <button class="dropdown-toggle nigeria-green inline-flex items-center">About Us <i class="fas fa-chevron-down text-xs ml-2"></i></button>
+                        <div class="dropdown-content">
+                            <a href="ambassador.html">Ambassador's Welcome</a>
+                            <a href="mission-history.html">History of the Mission</a>
+                            <a href="our-team.html">Our Team</a>
+                        </div>
+                    </div>
+                    <div class="dropdown relative">
+                        <button class="dropdown-toggle text-gray-600 hover:nigeria-green inline-flex items-center">Nigeria <i class="fas fa-chevron-down text-xs ml-2"></i></button>
+                        <div class="dropdown-content">
+                            <a href="nigeria-history.html">History & People</a>
+                            <a href="nigeria-culture.html">Culture & Tourism</a>
+                            <a href="nigeria-economy.html">Economy & Investment</a>
+                            <a href="nigeria-symbols.html">National Symbols</a>
+                        </div>
+                    </div>
+                    <div class="dropdown relative">
+                        <button class="dropdown-toggle text-gray-600 hover:nigeria-green inline-flex items-center">Services <i class="fas fa-chevron-down text-xs ml-2"></i></button>
+                        <div class="dropdown-content">
+                            <a href="visas.html">Visa Services</a>
+                            <a href="etc.html">Emergency Travel Certificate</a>
+                            <hr class="my-1">
+                            <span class="block px-4 pt-2 pb-1 text-xs text-gray-500 font-semibold uppercase">Document Legalization</span>
+                            <a href="age-declaration.html">Age Declaration</a>
+                            <a href="citizens-identification.html">Citizens Identification</a>
+                            <a href="change-of-profession.html">Change of Profession</a>
+                            <a href="burial-permit.html">Burial Transit Permit</a>
+                        </div>
+                    </div>
+                    <div class="dropdown relative">
+                        <button class="dropdown-toggle text-gray-600 hover:nigeria-green inline-flex items-center">Press Center <i class="fas fa-chevron-down text-xs ml-2"></i></button>
+                        <div class="dropdown-content">
+                            <a href="news.html">Latest News</a>
+                            <a href="gallery.html">Photo Gallery</a>
+                        </div>
+                    </div>
+                    <a href="contact.html" class="text-gray-600 hover:nigeria-green">Contact Us</a>
+                </div>
+                <div class="flex items-center ml-6 pl-6 border-l border-gray-200">
+                    <div class="hidden xl:flex items-center text-sm text-gray-600 mr-6">
+                        <i class="fas fa-phone-alt mr-2 nigeria-green"></i>
+                        <span>+420 220 561 040</span>
+                    </div>
+                    <div class="flex items-center space-x-4">
+                        <a href="https://x.com/NigeriaInPrague" class="text-gray-500 hover:nigeria-green transition-colors" title="Follow us on X"><i class="fa-brands fa-x-twitter text-xl"></i></a>
+                        <a href="https://facebook.com/NigeriaInPrague" class="text-gray-500 hover:nigeria-green transition-colors" title="Follow us on Facebook"><i class="fab fa-facebook-f text-xl"></i></a>
+                        <a href="https://instagram.com/NigeriaInPrague" class="text-gray-500 hover:nigeria-green transition-colors" title="Follow us on Instagram"><i class="fab fa-instagram text-xl"></i></a>
                     </div>
                 </div>
-                <div class="dropdown relative">
-                    <button class="dropdown-toggle text-gray-600 hover:nigeria-green inline-flex items-center">Nigeria <i class="fas fa-chevron-down text-xs ml-2"></i></button>
-                    <div class="dropdown-content">
-                        <a href="nigeria-history.html">History & People</a>
-                        <a href="nigeria-culture.html">Culture & Tourism</a>
-                        <a href="nigeria-economy.html">Economy & Investment</a>
-                        <a href="nigeria-symbols.html">National Symbols</a>
-                    </div>
-                </div>
-                <div class="dropdown relative">
-                    <button class="dropdown-toggle text-gray-600 hover:nigeria-green inline-flex items-center">Services <i class="fas fa-chevron-down text-xs ml-2"></i></button>
-                    <div class="dropdown-content">
-                        <a href="visas.html">Visa Services</a>
-                        <a href="etc.html">Emergency Travel Certificate</a>
-                        <hr class="my-1">
-                        <span class="block px-4 pt-2 pb-1 text-xs text-gray-500 font-semibold uppercase">Document Legalization</span>
-                        <a href="age-declaration.html">Age Declaration</a>
-                        <a href="citizens-identification.html">Citizens Identification</a>
-                        <a href="change-of-profession.html">Change of Profession</a>
-                        <a href="burial-permit.html">Burial Transit Permit</a>
-                    </div>
-                </div>
-                <div class="dropdown relative">
-                    <button class="dropdown-toggle text-gray-600 hover:nigeria-green inline-flex items-center">Press Center <i class="fas fa-chevron-down text-xs ml-2"></i></button>
-                    <div class="dropdown-content">
-                        <a href="news.html">Latest News</a>
-                        <a href="gallery.html">Photo Gallery</a>
-                    </div>
-                </div>
-                <a href="contact.html" class="text-gray-600 hover:nigeria-green">Contact Us</a>
             </div>
             <div class="lg:hidden">
                 <button id="mobile-menu-button" class="text-gray-600 focus:outline-none"><i class="fas fa-bars text-2xl"></i></button>
@@ -130,29 +152,29 @@
             </div>
         </section>
 
-        <!-- Content Section -->
+        <!-- Team Content Section -->
         <div class="main-content-bg">
             <section class="py-20">
                 <div class="container mx-auto px-6">
-                    <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg">
+                    <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg card-3d-effect">
                         <p class="text-center text-gray-600 max-w-2xl mx-auto mb-12">Our dedicated team of diplomats and local staff are committed to serving the needs of our community and strengthening the ties between Nigeria and the Czech Republic.</p>
-                        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 max-w-5xl mx-auto">
+                        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 max-w-5xl mx-auto">
                             <!-- Ambassador Profile -->
-                            <div class="text-center card-3d-effect bg-gray-50 p-6 rounded-lg">
+                            <div class="team-card text-center">
                                 <img src="images/ambassador.jpg" alt="Ambassador H.E. Dr. Maureen Tamuno" class="w-48 h-48 mx-auto rounded-full object-cover shadow-lg mb-4">
-                                <h3 class="text-xl font-bold nigeria-green font-heading">H.E. Dr. Maureen Tamuno</h3>
+                                <h3 class="text-xl font-bold font-heading nigeria-green">H.E. Dr. Maureen Tamuno</h3>
                                 <p class="text-gray-500 font-semibold">Ambassador / Head of Mission</p>
                             </div>
                             <!-- Deputy Profile -->
-                            <div class="text-center card-3d-effect bg-gray-50 p-6 rounded-lg">
+                            <div class="team-card text-center">
                                 <img src="images/team-member-1.jpg" alt="Deputy Head of Mission" class="w-48 h-48 mx-auto rounded-full object-cover shadow-lg mb-4">
-                                <h3 class="text-xl font-bold nigeria-green font-heading">Mr. Adekunle Adeyemi</h3>
+                                <h3 class="text-xl font-bold font-heading nigeria-green">Mr. Adekunle Adeyemi</h3>
                                 <p class="text-gray-500 font-semibold">Deputy Head of Mission</p>
                             </div>
                             <!-- Consular Head Profile -->
-                            <div class="text-center card-3d-effect bg-gray-50 p-6 rounded-lg">
+                            <div class="team-card text-center">
                                 <img src="images/team-member-2.jpg" alt="Head of Consular Section" class="w-48 h-48 mx-auto rounded-full object-cover shadow-lg mb-4">
-                                <h3 class="text-xl font-bold nigeria-green font-heading">Mrs. Chinyere Okoro</h3>
+                                <h3 class="text-xl font-bold font-heading nigeria-green">Mrs. Chinyere Okoro</h3>
                                 <p class="text-gray-500 font-semibold">Minister / Head of Consular Section</p>
                             </div>
                         </div>
@@ -161,22 +183,24 @@
             </section>
         </div>
     </main>
-
+    
     <!-- Footer -->
     <footer class="nigeria-green-bg text-white pt-20 pb-10">
         <div class="container mx-auto px-6">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <div><h4 class="font-bold text-xl mb-4 font-heading">About the Embassy</h4><p class="text-sm">The Embassy of the Federal Republic of Nigeria in Prague is the official diplomatic representation of Nigeria in the Czech Republic.</p></div>
-                <div><h4 class="font-bold text-xl mb-4 font-heading">Quick Links</h4><ul class="text-sm space-y-2"><li class="hover:underline"><a href="visas.html">Visa Services</a></li><li class="hover:underline"><a href="etc.html">Emergency Travel</a></li><li class="hover:underline"><a href="news.html">Latest News</a></li></ul></div>
+                <div><h4 class="font-bold text-xl mb-4 font-heading">Contact Information</h4><ul class="text-sm space-y-2"><li class="flex items-start"><i class="fas fa-map-marker-alt w-4 mr-3 mt-1"></i><span>Na Čihadle 32, 160 00 Praha 6, Czech Republic</span></li><li class="flex items-center"><i class="fas fa-phone-alt w-4 mr-3"></i><span>+420 220 561 040</span></li><li class="flex items-center"><i class="fas fa-envelope w-4 mr-3"></i><span>info@nigerianembassy.cz</span></li></ul></div>
                 <div>
-                    <h4 class="font-bold text-xl mb-4 font-heading">Follow Us</h4>
-                    <div class="flex space-x-4">
-                        <a href="https://x.com/NigeriaInPrague" class="text-white hover:opacity-80 transition-opacity"><i class="fab fa-twitter text-2xl"></i></a>
-                        <a href="https://facebook.com/NigeriaInPrague" class="text-white hover:opacity-80 transition-opacity"><i class="fab fa-facebook-f text-2xl"></i></a>
-                        <a href="https://instagram.com/NigeriaInPrague" class="text-white hover:opacity-80 transition-opacity"><i class="fab fa-instagram text-2xl"></i></a>
-                    </div>
+                    <h4 class="font-bold text-xl mb-4 font-heading">Consular Hours</h4>
+                    <ul class="text-sm space-y-2">
+                        <li><span class="font-semibold">Monday - Friday:</span> 10:00 AM - 1:00 PM</li>
+                        <li><span class="font-semibold">Weekends & Public Holidays:</span> Closed</li>
+                    </ul>
                 </div>
-                <div><h4 class="font-bold text-xl mb-4 font-heading">Consular Hours</h4><ul class="text-sm space-y-2"><li><span class="font-semibold">Monday - Friday:</span> 10:00 AM - 1:00 PM</li><li><span class="font-semibold">Weekends & Public Holidays:</span> Closed</li></ul></div>
+                <div>
+                    <h4 class="font-bold text-xl mb-4 font-heading">Our Location</h4>
+                    <iframe src="https://maps.google.com/maps?q=Na%20%C4%8Cihadle%2032,%20160%2000%20Praha%206&t=&z=15&ie=UTF8&iwloc=&output=embed" width="100%" height="150" style="border:0;" allowfullscreen="" loading="lazy" class="rounded-lg"></iframe>
+                </div>
             </div>
             <div class="border-t border-gray-100 opacity-50 mt-10 pt-6 text-center text-sm"><p>&copy; 2025 Embassy of Nigeria, Prague. All Rights Reserved.</p></div>
         </div>
@@ -185,6 +209,17 @@
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             // JS for menus and translation
+            function updateTime() {
+                const timeEl = document.getElementById('prague-time');
+                if (timeEl) {
+                    const now = new Date();
+                    const options = { timeZone: 'Europe/Prague', weekday: 'short', month: 'short', day: 'numeric', hour: '2-digit', minute: '2-digit' };
+                    timeEl.textContent = now.toLocaleString('en-US', options);
+                }
+            }
+            updateTime();
+            setInterval(updateTime, 1000 * 60);
+
             const dropdownToggles = document.querySelectorAll('.dropdown-toggle');
             dropdownToggles.forEach(toggle => {
                 toggle.addEventListener('click', function(event) {
@@ -197,11 +232,11 @@
             window.addEventListener('click', () => document.querySelectorAll('.dropdown-content').forEach(d => d.style.display = 'none'));
             const mobileMenuButton = document.getElementById('mobile-menu-button');
             const mobileMenu = document.getElementById('mobile-menu');
-            const navHtml = document.querySelector('.hidden.lg\\:flex').innerHTML;
+            const navContainer = document.querySelector('.hidden.lg\\:flex');
             mobileMenuButton.addEventListener('click', function() {
                 mobileMenu.classList.toggle('hidden');
                 if (!mobileMenu.classList.contains('hidden')) {
-                    mobileMenu.innerHTML = navHtml;
+                    mobileMenu.innerHTML = navContainer.innerHTML;
                     mobileMenu.querySelectorAll('.dropdown-toggle').forEach(toggle => {
                         toggle.addEventListener('click', function(e) {
                             e.preventDefault();
